--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,24 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- Validation dependencies: -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>7.0.1.Final</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>jakarta.el</artifactId>
+      <version>4.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator-cdi</artifactId>
+      <version>7.0.1.Final</version>
+    </dependency>
 
   </dependencies>
 
